# cmake_study

./: CMakeLists.txt  README.md
case1/src/hello_world/: CMakeLists.txt
case1/src/hello_world/hello/include/: hello.h
case1/src/hello_world/hello/src/: hello.cc
case1/src/hello_world/include/: hello_world.h
case1/src/hello_world/world/: CMakeLists.txt
case1/src/hello_world/world/src/: world.cc
include/: s.h
intro_macro_define/: CMakeLists.txt  main.cc
list_op/: CMakeLists.txt
obj_lib/: CMakeLists.txt
obj_lib/p1/: CMakeLists.txt  test.cpp  test.hpp
obj_lib/p2/: CMakeLists.txt  p2.cpp  p2.hpp
proj/: CMakeLists.txt  README.md  main.cpp  util.h
proj/liba/: CMakeLists.txt  a.cpp
proj/liba/include/: a.h
proj/libb/: CMakeLists.txt  b.cpp
proj/libb/include/: b.h
src/: main.cc  s.cc
src/hello_world/hello/: CMakeLists.txt
src/hello_world/src/: hello_world.cc
src/hello_world/world/include/: world.h
